CB-33854 Add maintenance submitter HTTP execute dispatch
POST execute callbacks with timeouts and internal actor auth.
Parse execution_ref for execute_path and record FAILED on invoke failure.