@@ -8,7 +8,6 @@ import jakarta.ws.rs.client.Entity;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 
-import org.apache.commons.lang3.StringUtils;
 import org.glassfish.jersey.client.ClientProperties;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -26,21 +25,17 @@ import com.sequenceiq.maintenance.domain.MaintenanceWindowTask;
 import com.sequenceiq.maintenance.service.model.WindowOccurrence;
 
 /**
- * HTTP client that invokes a submitter service's execute callback when the dispatcher
- * decides a task may run. Posts to submitter internal execute paths ({@code execution_ref.execute_path});
- * submitters validate {@code run_id}/{@code task_id} on receipt.
+ * HTTP client that invokes a submitter service when the dispatcher decides a task may run.
+ * Posts to submitter internal execute paths ({@code execution_ref.execute_path}).
+ * Submitters validate {@code run_id}/{@code task_id} on receipt.
  * <p>
- * Phase 1 relies on cluster-internal network reachability (no outbound auth headers). Submitters must
- * validate {@code run_id} and {@code task_id} against their own state before executing work.
+ * Each call performs a single HTTP POST (no invoke-level retries); occurrence retries are handled
+ * by the dispatcher tick per registered task retry policy.
  */
 @Component
 public class MaintenanceTaskSubmitterHttpClient implements MaintenanceTaskSubmitterClient {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(MaintenanceTaskSubmitterHttpClient.class);
-
-    private static final String EXECUTE_PATH_KEY = "execute_path";
-
-    private static final String SUBMITTER_SERVICE_KEY = "submitter_service";
 
     private static final String IDEMPOTENCY_KEY_HEADER = "Idempotency-Key";
 
@@ -52,6 +47,8 @@ public class MaintenanceTaskSubmitterHttpClient implements MaintenanceTaskSubmit
 
     private final RestClientFactory restClientFactory;
 
+    private final MaintenanceSubmitterOutboundRequestBuilder outboundRequestBuilder;
+
     private final int connectTimeoutMs;
 
     private final int readTimeoutMs;
@@ -60,10 +57,12 @@ public class MaintenanceTaskSubmitterHttpClient implements MaintenanceTaskSubmit
     public MaintenanceTaskSubmitterHttpClient(
             SubmitterServiceEndpointResolver submitterServiceEndpointResolver,
             RestClientFactory restClientFactory,
+            MaintenanceSubmitterOutboundRequestBuilder outboundRequestBuilder,
             @Value("${maintenance.dispatcher.submitter.connect-timeout-ms:30000}") int connectTimeoutMs,
             @Value("${maintenance.dispatcher.submitter.read-timeout-ms:120000}") int readTimeoutMs) {
         this.submitterServiceEndpointResolver = submitterServiceEndpointResolver;
         this.restClientFactory = restClientFactory;
+        this.outboundRequestBuilder = outboundRequestBuilder;
         this.connectTimeoutMs = connectTimeoutMs;
         this.readTimeoutMs = readTimeoutMs;
     }
@@ -75,68 +74,58 @@ public class MaintenanceTaskSubmitterHttpClient implements MaintenanceTaskSubmit
             MaintenanceWindowSchedule schedule,
             WindowOccurrence occurrence,
             String policyRevision) {
-        Map<String, Object> executionRef = executionRefValues(task.getExecutionRef());
-        String executePath = stringValue(executionRef, EXECUTE_PATH_KEY);
-        if (StringUtils.isBlank(executePath)) {
-            return dispatchFailure("Missing execute_path in execution_ref for task id=" + task.getId());
+        MaintenanceTaskExecutionRef executionRef;
+        try {
+            executionRef = MaintenanceTaskExecutionRef.parse(task.getExecutionRef(), task.getSubmitterService());
+        } catch (IllegalArgumentException e) {
+            return dispatchFailure("Invalid execution_ref for task id=" + task.getId() + ": " + e.getMessage());
         }
-        String submitterService = resolveSubmitterService(executionRef, task);
-        String baseUrl = submitterServiceEndpointResolver.resolveBaseUrl(submitterService).orElse(null);
-        if (StringUtils.isBlank(baseUrl)) {
-            return dispatchFailure("No submitter base URL configured for service " + submitterService);
+        String baseUrl = submitterServiceEndpointResolver.resolveBaseUrl(executionRef.submitterService()).orElse(null);
+        if (baseUrl == null || baseUrl.isBlank()) {
+            return dispatchFailure("No submitter base URL configured for service " + executionRef.submitterService());
         }
-        String url = joinUrl(baseUrl, executePath);
+        String url = joinUrl(baseUrl, executionRef.executePath());
         String idempotencyKey = dispatchIdempotencyKey(run);
         MaintenanceTaskDispatchRequest body = buildRequestBody(task, run, schedule, occurrence, policyRevision, idempotencyKey);
-        try (Response response = restClientFactory.getOrCreateDefault()
-                .target(url)
-                .property(ClientProperties.CONNECT_TIMEOUT, connectTimeoutMs)
-                .property(ClientProperties.READ_TIMEOUT, readTimeoutMs)
-                .request(MediaType.APPLICATION_JSON)
+        try (Response response = outboundRequestBuilder.prepareJsonPost(restClientFactory.getOrCreateDefault()
+                        .target(url)
+                        .property(ClientProperties.CONNECT_TIMEOUT, connectTimeoutMs)
+                        .property(ClientProperties.READ_TIMEOUT, readTimeoutMs))
                 .header(IDEMPOTENCY_KEY_HEADER, idempotencyKey)
                 .post(Entity.entity(body, MediaType.APPLICATION_JSON))) {
-            return toDispatchResult(response, submitterService, task, run);
+            return toDispatchResult(response, executionRef, task, run);
         } catch (RuntimeException e) {
             String kind = e instanceof ProcessingException ? "Network error" : "Failed to dispatch";
             String message = kind + " task id=" + task.getId() + " run id=" + run.getId()
-                    + " to submitter " + submitterService + ": " + e.getMessage();
-            LOGGER.error("Failed to dispatch task id={} run id={} to submitter {}", task.getId(), run.getId(), submitterService, e);
+                    + " to submitter " + executionRef.submitterService() + ": " + e.getMessage();
+            LOGGER.error("Failed to dispatch task id={} run id={} to submitter {}",
+                    task.getId(), run.getId(), executionRef.submitterService(), e);
             return MaintenanceTaskSubmitterDispatchResult.failed(message);
         }
     }
 
     private MaintenanceTaskSubmitterDispatchResult toDispatchResult(
             Response response,
-            String submitterService,
+            MaintenanceTaskExecutionRef executionRef,
             MaintenanceWindowTask task,
             MaintenanceWindowRun run) {
         int status = response.getStatus();
         if (status == Response.Status.ACCEPTED.getStatusCode()) {
             LOGGER.debug("Submitter {} accepted async dispatch for task id={} run id={} HTTP {}",
-                    submitterService, task.getId(), run.getId(), status);
+                    executionRef.submitterService(), task.getId(), run.getId(), status);
             return MaintenanceTaskSubmitterDispatchResult.success(MaintenanceTaskSubmitterOutcome.ASYNC_ACCEPTED);
         }
         if (status >= HTTP_OK_MIN && status < HTTP_OK_MAX_EXCLUSIVE) {
             LOGGER.debug("Submitter {} completed sync dispatch for task id={} run id={} HTTP {}",
-                    submitterService, task.getId(), run.getId(), status);
+                    executionRef.submitterService(), task.getId(), run.getId(), status);
             return MaintenanceTaskSubmitterDispatchResult.success(MaintenanceTaskSubmitterOutcome.SYNC_COMPLETED);
         }
         String responseBody = readResponseBody(response);
-        String message = "Submitter " + submitterService + " returned HTTP " + status
+        String message = "Submitter " + executionRef.submitterService() + " returned HTTP " + status
                 + (responseBody == null ? "" : ": " + responseBody);
         LOGGER.warn("Submitter {} returned HTTP {} for task id={} run id={} body={}",
-                submitterService, status, task.getId(), run.getId(), responseBody);
+                executionRef.submitterService(), status, task.getId(), run.getId(), responseBody);
         return MaintenanceTaskSubmitterDispatchResult.failed(message);
-    }
-
-    private static String resolveSubmitterService(Map<String, Object> executionRef, MaintenanceWindowTask task) {
-        String fromExecutionRef = stringValue(executionRef, SUBMITTER_SERVICE_KEY);
-        return StringUtils.isBlank(fromExecutionRef) ? task.getSubmitterService() : fromExecutionRef;
-    }
-
-    private static String stringValue(Map<String, Object> map, String key) {
-        Object value = map.get(key);
-        return value != null ? value.toString() : null;
     }
 
     private static MaintenanceTaskSubmitterDispatchResult dispatchFailure(String message) {
@@ -144,9 +133,9 @@ public class MaintenanceTaskSubmitterHttpClient implements MaintenanceTaskSubmit
         return MaintenanceTaskSubmitterDispatchResult.failed(message);
     }
 
-    static String joinUrl(String baseUrl, String executePath) {
+    static String joinUrl(String baseUrl, String relativePath) {
         String base = baseUrl.replaceAll("/+$", "");
-        String path = executePath.startsWith("/") ? executePath : "/" + executePath;
+        String path = relativePath.startsWith("/") ? relativePath : "/" + relativePath;
         return base + path;
     }
 
@@ -183,13 +172,6 @@ public class MaintenanceTaskSubmitterHttpClient implements MaintenanceTaskSubmit
                 policyRevision,
                 occurrence.windowStart(),
                 occurrence.windowEnd());
-    }
-
-    private static Map<String, Object> executionRefValues(Json executionRef) {
-        if (executionRef == null) {
-            return Map.of();
-        }
-        return executionRef.getMap();
     }
 
     private String readResponseBody(Response response) {
